# dio-document-fraude

./: README.md  main.py  pyproject.toml
services/: blob_service.py  card_service.py
